--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,73 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-dark {
+  --bg-color: #000;
+  --accent-color: #00cc14;
+  --stroke-color: #00cc14;
+  --button-text-color: #00cc14;
+  --green: #00cc14;
+  --contour-color: var(--green);
+  --text-weight: 465;
+  --title-weight: 785;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c 0.01%, #004306);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root.theme-dark {
+    --button-text-color: #00cc14;
+    --bg-color: #000;
+    --contour-color: var(--green);
+    --accent-color: #00cc14;
+    --stroke-color: #00cc14;
+    --text-weight: 465;
+    --title-weight: 785;
+    --bg-image: repeating-linear-gradient(
+        to right,
+        #000 0 2px,
+        transparent 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+      linear-gradient(to bottom, #007f0c 0.01%, #004306);
+  }
+}
+
+:root.theme-light {
+  --bg-color: #fff;
+  --stroke-color: #fff;
+  --contour-color: var(--black);
+  --accent-color: #000;
+  --text-weight: 400;
+  --title-weight: 700;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+}
+
+@media (prefers-color-scheme: light) {
+  :root.theme-light {
+    --bg-color: #fff;
+    --stroke-color: #fff;
+    --contour-color: var(--black);
+    --accent-color: #000;
+    --text-weight: 400;
+    --title-weight: 700;
+    --bg-image: repeating-linear-gradient(
+        to right,
+        #d3d3d3 0 2px,
+        transparent 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  }
+}
