--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,26 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --regularfont: "PressStart2P", sans-serif;
+  --variablefont: "Inter-Variable", sans-serif;
+  --text-weight: 400;
+  --green: #00cc14;
+  --white: #fff;
+  --black: #000;
+  --title-weight: 700;
+  --heart-body-color: var(--black);
+  --bg-color: #fff;
+  --stroke-color: #fff;
+  --button-text-color: var(--white);
+  --floppy-color: var(--black);
+  --contour-color: #000;
+  --sparks-color: #ff0000;
+  --active-heart-color: #ff0000;
+  --accent-color: #000;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+}
