--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,45 +4,10 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
-:root.theme-dark {
-  --bg-color: #000;
-  --accent-color: #00cc14;
-  --stroke-color: #00cc14;
-  --button-text-color: #00cc14;
-  --green: #00cc14;
-  --contour-color: var(--green);
-  --text-weight: 465;
-  --title-weight: 785;
-  --bg-image: repeating-linear-gradient(
-      to right,
-      #000 0 2px,
-      transparent 2px 4px
-    ),
-    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
-    linear-gradient(to bottom, #007f0c 0.01%, #004306);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root.theme-dark {
-    --button-text-color: #00cc14;
-    --bg-color: #000;
-    --contour-color: var(--green);
-    --accent-color: #00cc14;
-    --stroke-color: #00cc14;
-    --text-weight: 465;
-    --title-weight: 785;
-    --bg-image: repeating-linear-gradient(
-        to right,
-        #000 0 2px,
-        transparent 2px 4px
-      ),
-      repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
-      linear-gradient(to bottom, #007f0c 0.01%, #004306);
-  }
-}
 
 :root.theme-light {
   --bg-color: #fff;
+	--button-text-color: var(--white);
   --stroke-color: #fff;
   --contour-color: var(--black);
   --accent-color: #000;
@@ -58,7 +23,8 @@
 }
 
 @media (prefers-color-scheme: light) {
-  :root.theme-light {
+  :root{
+		--button-text-color: var(--white);
     --bg-color: #fff;
     --stroke-color: #fff;
     --contour-color: var(--black);
@@ -72,5 +38,41 @@
       ),
       repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
       linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  }
+}
+
+:root.theme-dark {
+  --bg-color: #000;
+  --accent-color: #00cc14;
+  --stroke-color: #00cc14;
+  --button-text-color: var(--green);
+  --contour-color: var(--green);
+  --text-weight: 465;
+  --title-weight: 785;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c 0.01%, #004306);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --button-text-color: var(--green);
+    --bg-color: #000;
+    --contour-color: var(--green);
+    --accent-color: #00cc14;
+    --stroke-color: #00cc14;
+    --text-weight: 465;
+    --title-weight: 785;
+    --bg-image: repeating-linear-gradient(
+        to right,
+        #000 0 2px,
+        transparent 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+      linear-gradient(to bottom, #007f0c 0.01%, #004306);
   }
 }
